--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Simulador de Escenarios de Ventas | Total PEC</title>
     <meta name="description" content="Aplicación web para simular y analizar escenarios de ventas, optimizar inventario y tomar decisiones informadas basadas en datos." />
     <meta name="author" content="Total PEC" />
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <meta property="og:title" content="Simulador de Escenarios de Ventas | Total PEC" />
     <meta property="og:description" content="Aplicación web para simular y analizar escenarios de ventas, optimizar inventario y tomar decisiones informadas basadas en datos." />
     <meta property="og:type" content="website" />
